# VideoEditorFramework

./: .gitignore  Cargo.toml  Makefile  build_android.sh  build_x264.sh
rust_ffmpeg/: Cargo.toml  build.rs
rust_ffmpeg/src/: lib.rs
xhey_codec/: Cargo.toml
xhey_codec/src/: lib.rs
xhey_codec/src/encode/: mod.rs
xhey_codec/src/encode/common/: mod.rs  packets.rs  record_processor.rs
xhey_codec/src/encode/encoder/: audio_encoder.rs  mod.rs  video_encoder.rs
xhey_codec/src/ffi/: android.rs  mod.rs
